--- a/.assets/css/style.css
+++ b/.assets/css/style.css
@@ -189,6 +189,10 @@ h4:hover .heading-permalink, h5:hover .heading-permalink, h6:hover .heading-perm
     color: #fff !important;
 }
 
+.table-dark > tbody > tr > td a {
+    color: #3fadde !important;
+}
+
 /****************************
 *** PAGE-SPECIFIC Classes
 ****************************/
