--- a/.assets/css/style.css
+++ b/.assets/css/style.css
@@ -58,6 +58,10 @@ a {
     background-color: yellow;
 }
 
+p > code, li > code {
+    color: #3829cb !important;
+}
+
 /*********************
 *** SHORTCUTS
 *********************/
@@ -191,6 +195,10 @@ h4:hover .heading-permalink, h5:hover .heading-permalink, h6:hover .heading-perm
 
 .table-dark > tbody > tr > td a {
     color: #3fadde !important;
+}
+
+.table-dark > tbody > tr > td > code {
+    color: #ff007f !important;
 }
 
 /****************************
