--- a/.assets/css/style.css
+++ b/.assets/css/style.css
@@ -62,6 +62,15 @@ p > code, li > code {
     color: #3829cb !important;
 }
 
+.details, .details-border {
+    padding: 1rem !important;
+    margin-bottom: 1rem!important;
+}
+
+.details-border {
+    border: 1px solid #212529!important;
+}
+
 /*********************
 *** SHORTCUTS
 *********************/
