--- a/.assets/css/style.css
+++ b/.assets/css/style.css
@@ -62,13 +62,21 @@ a {
     color: #3829cb !important;
 }
 
-.details, .details-border {
+.details, .details-border, .det-e {
     padding: 1rem !important;
     margin-bottom: 1rem!important;
 }
 
-.details-border {
+.details-border, .det-e {
     border: 1px solid #212529!important;
+}
+
+.details-e > summary {
+    font-weight: bold;
+}
+
+.details-e > :nth-child(2) {
+    padding-top: 1rem;
 }
 
 /*********************
