--- a/.assets/css/main.css
+++ b/.assets/css/main.css
@@ -116,6 +116,13 @@ a {
   padding-top: 1rem;
 }
 
+.details-s {
+  padding: 0.5rem !important;
+}
+.details-s > :nth-child(2) {
+  padding-top: 1rem;
+}
+
 /**
 The navbar
 **/
